feat:增加size接口;